[project]
name = "finetune-for-tool-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
    "sentencepiece>=0.2.1",
    "streamlit>=1.54.0",
    "together>=2.0.0",
    "transformers<5",
]
